#
# Makefile.am for the libcraytool and dlaunch components of the craytool 
# interface.
#
# Copyright 2011-2015 Cray Inc.  All Rights Reserved.
#
# Unpublished Proprietary Information.
# This unpublished work is protected to trade secret, copyright and other laws.
# Except as permitted by contract or express written permission of Cray Inc.,
# no part of this work or its content may be used, reproduced or disclosed
# in any form.
#
## $HeadURL$
## $Date$
## $Rev$
## $Author$

SUBDIRS			= ld_val useful cti_transfer mpir_iface frontend backend daemon

noinst_HEADERS	= cti_defs.h
