#
# Makefile.am for manpage.
#
# Copyright 2021 Hewlett Packard Enterprise Development LP.
# SPDX-License-Identifier: Linux-OpenIB
#
# Unpublished Proprietary Information.
# This unpublished work is protected to trade secret, copyright and other laws.
# Except as permitted by contract or express written permission of Hewlett Packard Enterprise Development LP.,
# no part of this work or its content may be used, reproduced or disclosed
# in any form.

man1_MANS = cti.1
man3_MANS = cti.3

cti.1: cti.1.md
	../../external/cdst_build_library/doc/generate.sh

cti.3: cti.3.md
	../../external/cdst_build_library/doc/generate.sh
