#
# Makefile.am for SLURM utilities.
#
# Copyright2014 Cray Inc.  All Rights Reserved.
#
# Unpublished Proprietary Information.
# This unpublished work is protected to trade secret, copyright and other laws.
# Except as permitted by contract or express written permission of Cray Inc.,
# no part of this work or its content may be used, reproduced or disclosed
# in any form.
#
## $HeadURL$
## $Date$
## $Rev$
## $Author$

###################################
# WARNING: THIS IS GPL DIRECTORY!!
###################################
libexec_SCRIPTS		= cti_slurm_step_util.sh
